# stood

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MULTI_AGENT_ARCHITECTURE.md  README.md  run_mistral_tool_test.sh
TODOS/: CALLBACK_TODO.md  DOCS_TODO.md  DYNAMIC_MODEL_REGISTRATION.md  MCPAUTH_TODO.md  METRICS_TODO.md  TOOLCHOICE_TODO.md  VERIFICATION_LLMCLIENT.md  novamicro_research.md
docs/: CLOUDWATCH_GENAI_IMPLEMENTATION_GUIDE.md  CLOUDWATCH_GENAI_OBSERVABILITY_KNOWLEDGE.md  CODEBASE_MAP.md  README.md  api.md  architecture.md  callbacks.md  context_manager.md  conversation_manager.md  examples.md  index.md  mcp.md  streaming.md  telemetry.md  tools-middleware.md  tools.md
examples/: 001_tool_macro.rs  002_tool_decorator_registry.rs  003_interactive_chat_simple.rs  004_streaming_simple.rs  005_callbacks_basic.rs  006_callback_system_demo.rs  007_debug_logging.rs  008_streaming_custom_callbacks.rs  009_logging_demo.rs  010_streaming_with_tools.rs  011_basic_agent.rs  012_batching_optimization_demo.rs  013_mcp_integration.rs  014_mcp_configuration_examples.rs  015_authorization_chat_wrapper.rs  016_context_management.rs  017_parallel_execution.rs  README.md  (+12 more)
examples/022_aws_doc_mcp/: 022_aws_documentation_mcp.rs  Cargo.toml  DOCKER_BUILD_GUIDE.md  README.md  VERIFICATION_GUIDE.md  docker_mcp_setup.sh  verify_setup.sh
examples/023_telemetry/: Cargo.toml  DASHBOARD_GUIDE.md  FIX_DATASOURCE.md  IMPORT_DASHBOARD.md  PORT_CONFIGURATION.md  QUICKSTART.md  README.md  debug_telemetry_flow.sh  demo-overview.sh  docker-compose.yml  metrics_only_test.rs  metrics_test.rs  performance_benchmark.rs  run-demo.sh  setup-telemetry.sh  simple_telemetry_test.rs  smart_telemetry_test.rs  stop-telemetry.sh  telemetry_demo.rs  test_smart_config.sh  troubleshoot.sh
examples/023_telemetry/grafana/dashboards/: stood-comprehensive-telemetry-v12.json  stood-telemetry.json
examples/023_telemetry/grafana/provisioning/dashboards/: dashboards.yml
examples/023_telemetry/grafana/provisioning/datasources/: datasources.yml
examples/023_telemetry/otel-collector/: otel-collector-config.yaml
examples/023_telemetry/prometheus/: prometheus.yml
stood-macros/: Cargo.toml
stood-macros/src/: lib.rs
(+181 files in other folders)
