[package]
name = "stood-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Stood agent library"
authors = ["Stood Team"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"

[dev-dependencies]
trybuild = "1.0"