[workspace]

[package]
name = "stood-telemetry-demo"
version = "0.1.0"
edition = "2021"
description = "Comprehensive telemetry demonstration for the Stood agent library"
license = "Apache-2.0"

[[bin]]
name = "telemetry_demo"
path = "telemetry_demo.rs"

[[bin]]
name = "metrics_test"
path = "metrics_test.rs"

[[bin]]
name = "metrics_only_test"
path = "metrics_only_test.rs"

[[example]]
name = "smart_telemetry_test"
path = "smart_telemetry_test.rs"

[[example]]
name = "simple_telemetry_test"
path = "simple_telemetry_test.rs"

[dependencies]
# Core Stood library with always-on telemetry
stood = { path = "../../" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling  
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
fastrand = "2.0"

# HTTP client for examples
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# For tool macro
async-trait = "0.1"

[features]
default = []